--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,18 @@
     background-color: var(--background-color);
 }
 
-.titleBackground{
+.header{
     background-image: linear-gradient(blue, green );
+    margin: 0px;
+    border: 0px;
 }
+
+.button {
+    background-color: #8fd4eb;
+    border-radius: 10px;
+    color: lightgrey;
+    padding: 20px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
