--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,25 @@
     background-color: var(--background-color);
 }
 
-.header{
-    background-image: linear-gradient(blue, green );
-    margin: 0px;
-    border: 0px;
+header.header{
+	color: white;
+	background-color: #3D6271;
+	margin: 0px;
+	padding: 0.1em 0.5em 0.1em 0.5em;
+    text-align: right;
+}
+
+footer.footer{
+	color: white;
+	background-color: #3D6271;
+	margin: 0px;
+	padding: 0.1em 0.5em 0.1em 0.5em;
+    text-align: left;
+    font-size:1.1em;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
 }
 
 .button {
@@ -21,3 +36,13 @@
     text-decoration: none;
     display: inline-block;
     font-size: 18px;
+}
+
+.aboutUsContent{
+    color: lightgrey;
+    background-color: lightseagreen;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    position: relative;
+    width: 65%;
+}
