--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 
 .pageBackground{
     background-color: var(--background-color);
+    margin: 0px;
 }
 
 header.header{
@@ -36,13 +37,21 @@ footer.footer{
     text-decoration: none;
     display: inline-block;
     font-size: 18px;
+
+}
+
+div.banner{
+    background-color: lightgreen;
+    height: 240px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 .aboutUsContent{
-    color: lightgrey;
-    background-color: lightseagreen;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
-    position: relative;
-    width: 65%;
+    padding: 0px 0px 0px 10px;
+    margin: 0px 0px 0px 0px;
 }
+
