--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ footer.footer{
 
 .button {
     background-color: #8fd4eb;
+    color: white;
     border-radius: 10px;
     padding: 20px 32px;
     text-align: center;
@@ -75,3 +76,36 @@ div.lowerDiv{
     align-items: center;
 }
 
+.cancelButton {
+    background-color: #8fd4eb;
+    color: white;
+    border-radius: 10px;
+    padding: 20px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    float: left;
+}
+
+.nextButton {
+    background-color: #8fd4eb;
+    color: white;
+    border-radius: 10px;
+    padding: 20px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    float: right;
+}
+
+.nextButton:hover{
+    cursor: pointer;
+}
+
+div#form2{
+    display: none;
+}
+
+div#results{
+    display: none;
+}
