--- a/styles.css
+++ b/styles.css
@@ -116,9 +116,10 @@ div.lowerDiv{
     text-align: center;
     text-decoration: none;
     font-size: 18px;
-    position: relative;
-    top: 20px;
-    left: 1020px;
+    position: absolute;
+    right: 115px;
+    float: right;
+    
 }
 
 div#form2{
