--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,11 @@
     margin: 0px;
 }
 
+header > h1{
+    font-weight: bold;
+    text-align: center;
+}
+
 header.header{
 	color: white;
     background-image: linear-gradient(rgb(5,253,173) 20%,rgb(115,189,221));
@@ -73,10 +78,11 @@ div.banner{
 }
 
 .homeContent{
-    color: black;
+    color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
-    padding: 0px 0px 0px 10px;
+    font-weight: bold;
+    padding: 10px 0px 0px 10px;
     margin: 0px 0px 0px 0px;
 }
 
@@ -105,6 +111,8 @@ div.lowerDiv{
     text-align: center;
     text-decoration: none;
     font-size: 18px;
+    position: absolute;
+    right: 5px;
     float: right;
 }
 
@@ -122,10 +130,28 @@ div.lowerDiv{
     
 }
 
+div#form1{
+    padding: 0px 20px 0px 20px;
+}
+
 div#form2{
     display: none;
+    padding: 0px 20px 0px 20px;
 }
 
 div#results{
     display: none;
+    padding: 0px 20px 0px 20px;
+}
+
+.surveyResults{
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+}
+
+.surveyScreen{
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
